<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CDDC39"
        tools:context=".MainActivity">

    <TextView android:layout_width="wrap_content" android:layout_height="0dp"
              android:text="@string/realmadrid"
              android:textStyle="bold"
              android:id="@+id/textView" tools:ignore="MissingConstraints"
              tools:layout_editor_absoluteX="272dp" tools:layout_editor_absoluteY="185dp"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/barcelona"
              android:id="@+id/textView2"
              android:textStyle="bold"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginTop="24dp"
              android:layout_marginStart="40dp"/>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/BracelonaGoal"
            android:id="@+id/BarcelonaGoal"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginStart="8dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/RealGoal"
            android:id="@+id/RealGoal"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/textView" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <Button
            android:text="@string/FinishButton"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/Finishbutton"
            android:layout_marginTop="76dp" app:layout_constraintTop_toBottomOf="@+id/RealGoal"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/RealGoal" app:layout_constraintEnd_toEndOf="@+id/RealGoal"/>
    <Button
            android:text="@string/ResetButton"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/ResetButton"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/TextGoalbarca"
            app:layout_constraintEnd_toEndOf="@+id/BarcelonaGoal"
            app:layout_constraintStart_toStartOf="@+id/BarcelonaGoal" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.418"/>
    <ImageView
            android:contentDescription="@string/imageball"
            android:layout_width="180dp"
            android:layout_height="180dp" app:srcCompat="@drawable/ic_soccerball" android:id="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="112dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0"/>
    <TextView
            android:layout_width="40dp"
            android:layout_height="30dp" android:id="@+id/TextGoalReal"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/RealGoal"
            app:layout_constraintEnd_toEndOf="@+id/RealGoal"
            app:layout_constraintStart_toStartOf="@+id/RealGoal" android:lineSpacingExtra="14sp"
            android:textAlignment="center"/>
    <TextView
            android:layout_width="40dp"
            android:layout_height="30dp" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/BarcelonaGoal" android:id="@+id/TextGoalbarca"
            app:layout_constraintEnd_toEndOf="@+id/BarcelonaGoal"
            app:layout_constraintStart_toStartOf="@+id/BarcelonaGoal" android:textAlignment="center"/>

</android.support.constraint.ConstraintLayout>
